--- a/app/src/main/res/layout/app_bar_detail.xml
+++ b/app/src/main/res/layout/app_bar_detail.xml
@@ -12,15 +12,13 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbardetail"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title=" ">
-        </android.support.v7.widget.Toolbar>
+            app:title=" "></android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
