--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ListView
         android:id="@+id/listNews"
         android:layout_width="match_parent"
@@ -11,14 +12,13 @@
         android:background="#FFFFFF"
         android:divider="#F5F5F5"
         android:dividerHeight="1dp"
-        android:visibility="visible"
-        />
+        android:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/nloader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
 
 </RelativeLayout>
