--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ListView
         android:id="@+id/SavedNews"
         android:layout_width="match_parent"
@@ -11,19 +12,18 @@
         android:background="#FFFFFF"
         android:divider="#F5F5F5"
         android:dividerHeight="1dp"
-        android:visibility="visible"
-        />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/snloader"
-        android:text="  Sorry No Item Saved"
-        android:textColor="#000"
-        android:textSize="24dp"
-        android:paddingLeft="5dp"
-        android:drawableLeft="@drawable/ic_sad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:drawableLeft="@drawable/ic_sad"
+        android:paddingLeft="5dp"
+        android:text="  Sorry No Item Saved"
+        android:textColor="#000"
+        android:textSize="24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -33,9 +33,9 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|right"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
-        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:src="@drawable/ic_clear" />
 
