--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#2978F1</color>
     <color name="colorPrimaryDark">#2978F1</color>
     <color name="colorAccent">#9D63E0</color>
+    <color name="color">#FFF</color>
 </resources>
